principio de responsive hecho

--- a/style.css
+++ b/style.css
@@ -1,5 +1,9 @@
 @import url(https://fonts.googleapis.com/css?family=Lato:100,300,400,700);
 
+@font-face {
+  font-family: 'Berlin Sans';
+  src: url(./public/BRLNSDB.TTF);
+}
 
 *{
   padding: 0;
@@ -25,98 +29,22 @@ html, body {
 }
 body {
   font-family: 'Lato', sans-serif; 
-  background-color: #222;
+  background-color: #fff;
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
 
-.preloader-wrap {
-  width: 100%;
-  height: 100%;
+
+.text-intro, button{
   position: relative;
-  margin: auto;
-  top: 0; 
-  bottom: 0;
-  background: rgba(0,0,0,1);
-  z-index : 2; 
-}
-
-.percentage {
-  z-index: 100;
-  border: 1px solid #ccc;
-  text-align:center;
-  color: #fff;
-  line-height: 30px;
-  font-size : 15px;
-}
-
-.loader,
-.percentage{
-  
-  height: 30px;
-  max-width: 80%; 
-  border-radius: 20px;
-  font-weight: 300;
-  position: absolute; 
-  top: 0; 
-  bottom: 0; 
-  left: 0; 
-  right: 0;
-  margin : auto; 
-}
-.loader:after,
-.percentage:after {
-  content: "";
-  display: block;
-  width: 100%;
-  height: 100%;
-  position: absolute;
-  top: 0;
-  left: 0;
-}
-
-.trackbar {
-  width: 100%;
-  height: 100%;
-  border-radius: 20px;
-  color: #fff;
+  right: 3rem;
+  width: 70vw;
+  height: 30vh;
+  z-index: 10;
+  font-size: 2rem;
   text-align: center;
-  line-height: 30px;
-  overflow: hidden;
-  position: relative;
-  opacity: 0.99;
-}
-
-.loadbar {
-  width: 0%;
-  height: 100%;
-  background: rgb(116, 116, 230);
-  position: absolute;
-  top: 0;
-  left: 0;
-  animation: flicker 5s infinite;
-  overflow: hidden;
-}
-
-.glow {
-  width: 0%;
-  height: 0%;
-  border-radius: 20px;
-  box-shadow: 0px 0px 60px 10px #a1e6f4;
-  position: absolute;
-  bottom: -5px;
-  animation: animation 5s infinite;
-}
-
-@keyframes animation {
-  10% {
-    opacity: 0.9;
-  }
-  30% {
-    opacity: 0.86;
-  }
-  60% {
-    opacity: 0.8;
-  }
-  80% {
-    opacity: 0.75;
-  }
+  font-family: 'Berlin Sans';
+  font-weight: 200;
+  color: #303030;
 }
