--- a/style.css
+++ b/style.css
@@ -38,13 +38,22 @@ body {
 
 .text-intro, button{
   position: relative;
-  right: 3rem;
-  width: 70vw;
-  height: 30vh;
+  left:2rem;
+  top: 3rem;
+  cursor: pointer;
+  width: 9rem;
+  height: 3rem;
   z-index: 10;
-  font-size: 2rem;
+  font-size: 1.3rem;
   text-align: center;
+  border-radius: 1rem;
+  border: none;
+  background-color: #54757d;
   font-family: 'Berlin Sans';
   font-weight: 200;
   color: #303030;
+}
+
+button:hover{
+  color: rgb(133, 179, 179);
 }
