--- a/style.css
+++ b/style.css
@@ -6,6 +6,8 @@
 }
 
 *{
+  font-family: 'Berlin Sans';
+
   padding: 0;
   margin: 0;
   box-sizing: border-box;
@@ -24,15 +26,22 @@
 
 
 html, body {
+  width: 100%;
   height: 100%;
   margin: 0;
 }
+
+
 body {
   font-family: 'Lato', sans-serif; 
   background-color: #fff;
   display: flex;
   align-items: center;
   justify-content: center;
+}
+
+h3{
+  color: white;
 }
 
 
@@ -56,4 +65,56 @@ body {
 
 button:hover{
   color: rgb(133, 179, 179);
+}
+
+.loader{
+  position: fixed;
+  display: flex;
+
+  background-color: black;
+  width: 100vw;
+  height: 100vh;
+  z-index: 5;
+}
+
+.logoloader{
+  width: 70%;
+}
+
+.loadercolor{
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  
+  align-items: center;
+  width: 100%;
+  height: 100%;
+}
+
+.percentage {
+  z-index: 100;
+  color: #fff;
+  line-height: 30px;
+  font-size : 22px;
+  font-weight: 100;
+
+  margin : auto; 
+}
+
+
+.percentage:after {
+  content: "";
+  display: block;
+  width: 100%;
+  height: 100%;
+  position: absolute;
+  top: 0;
+  left: 0;
+}
+
+@media (max-width: 600px){
+  .percentage, h3, button{
+    font-size : 18px;
+    font-weight: 100;
+  }
 }
