--- a/style.css
+++ b/style.css
@@ -1,29 +1,30 @@
-@import url(https://fonts.googleapis.com/css?family=Lato:100,300,400,700);
+@import url('https://fonts.cdnfonts.com/css/be-vietnam-pro');
+:root{
+  --ff-berlin: 'Berlin Sans';
+  --ff-vietnam: 'Be Vietnam Pro', sans-serif;
+  --ff-arcade: 'Arcade';
+
+  
+}
+
 
 @font-face {
   font-family: 'Berlin Sans';
   src: url(./public/fonts/BRLNSDB.TTF);
 }
 
+@font-face {
+  font-family: 'Arcade';
+  src: url(./public/fonts/ARCADE_N.TTF);
+}
+
+
 *{
   font-family: 'Berlin Sans';
-
   padding: 0;
   margin: 0;
   box-sizing: border-box;
 }
-
-.experience{
-  position: fixed;
-  width: 100vw;
-  height: 100vh;
-}
-
-.experience-camvas{
-  width: 100%;
-  height: 100%;
-}
-
 
 html, body {
   width: 100%;
@@ -32,13 +33,24 @@ html, body {
 }
 
 
-body {
-  font-family: 'Lato', sans-serif; 
+body{
+  font-family: var(--ff-vietnam), sans-serif; 
   background-color: #fff;
   display: flex;
   align-items: center;
   justify-content: center;
 }
+
+
+
+.experience{
+  position: fixed;
+  width: 100vw;
+  height: 100vh;
+}
+
+
+
 
 h3{
   color: white;
