--- a/style.css
+++ b/style.css
@@ -1,26 +1,8 @@
-@import url('https://fonts.cdnfonts.com/css/be-vietnam-pro');
-:root{
-  --ff-berlin: 'Berlin Sans';
-  --ff-vietnam: 'Be Vietnam Pro', sans-serif;
-  --ff-arcade: 'Arcade';
+@import url(/css/generic.css);
 
-  
-}
-
-
-@font-face {
-  font-family: 'Berlin Sans';
-  src: url(./public/fonts/BRLNSDB.TTF);
-}
-
-@font-face {
-  font-family: 'Arcade';
-  src: url(./public/fonts/ARCADE_N.TTF);
-}
 
 
 *{
-  font-family: 'Berlin Sans';
   padding: 0;
   margin: 0;
   box-sizing: border-box;
@@ -34,7 +16,6 @@ html, body {
 
 
 body{
-  font-family: var(--ff-vietnam), sans-serif; 
   background-color: #fff;
   display: flex;
   align-items: center;
