forms and styles

--- a/public/css/generic.css
+++ b/public/css/generic.css
@@ -14,7 +14,7 @@
 
 *{
     font-family: var(--ff-vietnam);
-    font-weight: var(--ff-vietnam-REGULAR);
+    font-weight: var(--fw-vietnam-REGULAR);
     padding: 0;
     margin: 0;
 }
