--- a/style.css
+++ b/style.css
@@ -1,6 +1,11 @@
 @import url(/css/generic.css);
 
 
+:root{
+  --size-cursor-hover: 50px;
+  --size-cursor-img: 20px;
+}
+
 
 *{
   padding: 0;
@@ -105,7 +110,93 @@ button:hover{
   left: 0;
 }
 
+
+
+#cursor{
+  transition: all 300ms;
+  position: absolute;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background: #ffffff;
+  border-radius: 100%;
+  transform: translate(-50%, -50%);
+  transition: 0.075s;
+  z-index: 20;
+}
+
+#cursor img{
+  width: var(--size-cursor-img);
+}
+
+.none{
+  transition: all 300ms;
+  animation: cursornohover 500ms forwards;
+  visibility: hidden;
+}
+
+.block{
+  transition: all 300ms;
+  animation: cursorhover 500ms forwards;
+  visibility: visible;
+}
+
+@keyframes cursorhover {
+  0%{
+    width: 0px;
+    height: 0px;
+  }
+  100% {
+    width: var(--size-cursor-hover);
+    height: var(--size-cursor-hover);
+  }
+}
+
+@keyframes cursornohover {
+  0%{
+    width: var(--size-cursor-hover);
+    height: var(--size-cursor-hover);
+  }
+  100% {
+    width: 0px;
+    height: 0px;
+  }
+}
+
+
+@media(max-width:2500px){
+  :root{
+    --size-cursor-hover: 50px;
+    --size-cursor-img: 22px;
+    
+  }
+}
+
+
+
+@media(max-width:1600px){
+  :root{
+    --size-cursor-hover: 40px;
+    
+  }
+}
+
+
+@media(max-width:1100px){
+  :root{
+    --size-cursor-hover: 34px;
+    --size-cursor-img: 16px;
+
+  }
+}
+
+
+
 @media (max-width: 600px){
+  :root{
+    --size-cursor-hover: 22px;
+    --size-cursor-img: 12px;
+  }
   .percentage, h3, button{
     font-size : 18px;
     font-weight: 100;
