--- a/style.css
+++ b/style.css
@@ -1,3 +1,7 @@
+@font-face {
+  font-family: Berlin Sans;
+  src: url(../fonts/BRLNSDB.TTF);
+}
 
 
 :root{
@@ -13,6 +17,7 @@
 }
 
 html, body {
+  font-family: Berlin Sans;
   width: 100%;
   height: 100%;
   margin: 0;
